change the presentation title.

--- a/app/data/config.json
+++ b/app/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "angular-showoff demo",
+    "title": "angularjs",
     "sections": [
         {"file": "data/begin/begin.md"},
         {"file": "data/end/end.md"}
